objects/AR_Obj1__c.object
<CustomObject>
    <fields>
        <fullName>AR_SField1__c</fullName>
        <description>Add Description1</description>
        <label>AR-SField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AR_SField2__c</fullName>
        <description>Add Description2</description>
        <label>AR-SField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SField3__c</fullName>
        <label>AR-SField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pl2__c</fullName>
        <label>Pl2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>